tests/baselines/reference/importAnImport.errors.txt
importAnImport.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importAnImport.ts(1,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importAnImport.ts(1,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importAnImport.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importAnImport.ts(6,23): error TS2694: Namespace 'c.a.b' has no exported member 'ma'.


==== importAnImport.ts (5 errors) ====
    module c.a.b {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import ma = a;
    }
    
    module m0 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import m8 = c.a.b.ma;
                          ~~
!!! error TS2694: Namespace 'c.a.b' has no exported member 'ma'.
    }